<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E9EFF2"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="155dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/vinh"
            android:gravity="center_horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dip"
                android:layout_height="32dp"
                android:layout_gravity="bottom|left"
                android:layout_weight="0.82"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/tripStart"
                android:textColor="@color/nav_text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/tripEnd"
                android:textColor="@color/nav_text_color"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="bottom|center"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|center"
                android:contentDescription="@null"
                android:src="@drawable/bg_date" />

            <TextView
                android:id="@+id/txt_day"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/img"
                android:layout_gravity="top|center"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="22"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_month"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/img"
                android:layout_gravity="bottom|center"
                android:gravity="center_horizontal"
                android:paddingBottom="19dp"
                android:text="SEPTEMBER"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/panel_background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:text="Du Xuân Xuyên Việt 2014"
                android:textColor="@color/nav_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="20dp"
                android:text="Nhân dịp chào xuân mới 2014, anh em ta tổ chức một chuyến du xuân xuyên việt"
                android:textColor="@color/nav_text_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_without_border_top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView311"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:drawableLeft="@drawable/like"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="30"
                android:textColor="@color/nav_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:drawableLeft="@drawable/comment"
                android:text="12"
                android:textColor="@color/nav_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.53"
                android:drawableLeft="@drawable/manager"
                android:text="5"
                android:textColor="@color/nav_text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/btn_background"
                android:text="@string/btnJoin"
                android:textColor="#FFFF" 
                android:layout_marginRight="10dp"
                android:textSize="13dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear34"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/panel_background"
            >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="left|center"
                android:text="@string/stations"
                android:textColor="@color/nav_text_color"
                android:textSize="16sp" 
                android:paddingLeft="10dp"
                android:layout_alignParentLeft="true"/>
            
            <Button
                android:id="@+id/btn_add_location"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_background"
                android:text="Thêm"
                android:textColor="#FFFF" 
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:textSize="13dp"/>
            
        </RelativeLayout>

        <ListView
            android:id="@+id/listViewStation"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:divider="@android:color/transparent"
            >
        </ListView>
    </LinearLayout>

</LinearLayout>